# ai-automata

./: .env.template  .gitignore  README.md  morning_summary.md  prompts.toml.template  pyproject.toml  requirements.txt  setup.py
docs/: dist-notes.md  oauth-setup-guide.md  session-summary.md  software-engineering-articles-plan.md
src/software_eng_articles/: daily_software_eng_articles.py  run_daily_summary.sh  setup_daily_summary_cron.sh  setup_env.sh
test/: test_summary.py
