[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-automata"
version = "0.1.0"
description = "Automated daily software engineering articles summarizer pipeline via agy CLI"
readme = "README.md"
authors = [
    { name = "Matt Swart" }
]
requires-python = ">=3.8"
dependencies = [
    "feedparser",
    "python-dotenv",
]

[project.scripts]
daily-summary = "software_eng_articles.daily_software_eng_articles:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["software_eng_articles"]

[tool.setuptools.package-data]
software_eng_articles = ["*.sh"]
